wip on building with ffmpeg cmake silliness

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,52 +18,52 @@ include(utils)
 # ------------------------------------------------------
 # Find packages
 
-# OpenEXR
-find_package(OpenEXR)
-if(OpenEXR_FOUND)
-    message("OpenEXR found")
-endif()
-
-# SPNG
-include(FindSPNG)
-if(SPNG_FOUND)
-    message("SPNG found")
-endif()
-
-# TGA
-find_package(TGA)
-if(TGA_FOUND)
-    message("TGA found")
-endif()
-
-# Freetype
-find_package(Freetype)
-if(FREETYPE_FOUND)
-    message("FreeType found")
-endif()
-
-# libjpeg
 find_package(JPEG)
 if(LIBJPEG_FOUND)
     message("libjpeg found")
 endif()
 
-# OCIO
+include(FindSPNG)
+if(SPNG_FOUND)
+    message("SPNG found")
+endif()
+
+find_package(TGA)
+if(TGA_FOUND)
+    message("TGA found")
+endif()
+
+find_package(OpenEXR)
+if(OpenEXR_FOUND)
+    message("OpenEXR found")
+endif()
+
 find_package(OpenColorIO)
 if(OpenColorIO_FOUND)
     message("OCIO found")
 endif()
 
+find_package(Freetype)
+if(FREETYPE_FOUND)
+    message("FreeType found")
+endif()
+
+find_package(FFMPEG) # FFMPEG ffmpeg Ffmpeg
+if(FFMPEG_FOUND)
+    message("ffmpeg found")
+endif()
+
+
 # Print Cmake variables
 # dump_cmake_variables()
-dump_cmake_variables("OCIO")
-dump_cmake_variables("SPNG")
-dump_cmake_variables("TGA")
-dump_cmake_variables("JPEG")
-dump_cmake_variables("FFMPEG")
-dump_cmake_variables("OPENEXR")
-dump_cmake_variables("ILMBASE")
 
+# dump_cmake_variables("JPEG")
+# dump_cmake_variables("SPNG")
+# dump_cmake_variables("TGA")
+# dump_cmake_variables("ILMBASE")
+# dump_cmake_variables("OPENEXR")
+# dump_cmake_variables("OCIO")
+dump_cmake_variables("FFMPEG")
 
 
 add_library(${LIB_NAME} SHARED
@@ -83,59 +83,41 @@ add_library(${LIB_NAME} SHARED
 add_compile_definitions(
     SSE_CENTOS7
     _GLIBCXX_USE_CXX11_ABI=0
+    # OpenColorIO_SKIP_IMPORTS
 )
 
-
-# add_definitions(-D_GLIBCXX_USE_CXX11_ABI=0)
-
-# set_target_properties(${LIB_NAME} PROPERTIES
-#     CXX_STANDARD 14
-#     CXX_STANDARD_REQUIRED ON
-#     CXX_EXTENSIONS OFF
-# )
-
-# set(CMAKE_CXX_STANDARD 14)
-# set(CMAKE_CXX_STANDARD_REQUIRED ON)
-# set(CMAKE_CXX_EXTENSIONS OFF)
-
-# add_compile_definitions(std=c++14)
-# add_definitions(std=c++14) # std=c++11  std=gnu++11
 
 target_include_directories(${LIB_NAME}
     PRIVATE
         ./include
-    # TODO: figure out how to use the packages / variants to resolve paths
     PUBLIC
+        ${JPEG_INCLUDE_DIR}
+        ${SPNG_SPNG_INCLUDE_DIR}
+        ${TGA_INCLUDE_DIR}
         ${ILMBASE_INCLUDE_PATH}
         ${OPENEXR_INCLUDE_PATH}
         ${OPENEXR_INCLUDE_PATH}/Imath
         ${OCIO_INCLUDE_DIR}
-        ${SPNG_SPNG_INCLUDE_DIR}
-        ${TGA_INCLUDE_DIR}
-        /mnt/rez/release/ext/libjpeg/9.2/platform-linux/arch-x86_64/os-centos-7/include
-        /mnt/rez/release/ext/ffmpeg/5.0.1/platform-linux/arch-x86_64/os-centos-7/include
+        ${FFMPEG_INCLUDE_DIR}
 )
 
-# find_package(openexr REQUIRED)
+# target_link_directories(${LIB_NAME}
+#     PUBLIC
+#         ${OCIO_LIBRARIES}
+#         # /home/tomsirdevan/rez/local/gt_base/0.1.0/platform-linux/arch-x86_64/os-centos-7
+#         /mnt/rez/release/ext/libjpeg/9.2/platform-linux/arch-x86_64/os-centos-7/lib
+#         /mnt/rez/release/ext/openexr/3.1.5/platform-linux/arch-x86_64/os-centos-7/lib64
+#         /mnt/rez/release/ext/ffmpeg/5.0.1/platform-linux/arch-x86_64/os-centos-7/lib
+#         /mnt/rez/release/ext/x264/stable.sse.1.0.1/platform-linux/arch-x86_64/os-centos-7/lib
+# )
 
 
-target_link_directories(${LIB_NAME}
-    PUBLIC
-        ${OCIO_LIBRARIES}
-        /home/tomsirdevan/rez/local/gt_base/0.1.0/platform-linux/arch-x86_64/os-centos-7
-        /mnt/rez/release/ext/libjpeg/9.2/platform-linux/arch-x86_64/os-centos-7/lib
-        /mnt/rez/release/ext/openexr/3.1.5/platform-linux/arch-x86_64/os-centos-7/lib64
-        /mnt/rez/release/ext/ffmpeg/5.0.1/platform-linux/arch-x86_64/os-centos-7/lib
-        /mnt/rez/release/ext/x264/stable.sse.1.0.1/platform-linux/arch-x86_64/os-centos-7/lib
-)
-
-
-target_compile_features(${LIB_NAME}
-    PUBLIC
-        cxx_auto_type
-        cxx_nullptr
-        cxx_range_for
-)
+# target_compile_features(${LIB_NAME}
+#     PUBLIC
+#         cxx_auto_type
+#         cxx_nullptr
+#         cxx_range_for
+# )
 
 set(libraryName ${LIB_NAME}${CMAKE_SHARED_LIBRARY_SUFFIX})
 
